momoiro_dark.css
@namespace url(http://www.w3.org/1999/xhtml);
@-moz-document domain("boards.4chan.org") {

	/* hiding */
	.boardBanner, hr, #blotter, #thread-stats, #update-timer, .sideArrows, div.reply input, #absbot.absBotText, .bottomCtrl
	{
		display: none !important;
	}

	body
	{
		background-color: #515151 !important;
		background-image: none !important;
		color: #e8e6df;
	}

	select
	{
		font-size: 12px;
	}

	.thread
	{
		padding: 0 20px 0 20px !important;
	}
	
	/* Search box */
	
	#search-box {
		color: #e8e6df !important;
		background: #828181 !important;
		border: none !important;
		padding: 2px 4px;
	}
	
	/* board */
	
	.board {
		margin-top: 10px;
	}
	
	/* pagelist */
	
	div.pagelist {
		background:  rgba(0,0,0,0.1) !important;
		border: none !important;
	}
	
	div.pagelist, div.cataloglink {
		border-left: none !important;
	}
	
	/* Hovered replied post */
	
	.reply.highlight {
		background: rgba(0,0,0,0.2) !important;
		border-top: 1px solid  rgba(0,0,0,0.2) !important;
		border-right: none !important;
		border-bottom: none !important;
	}
	
	/* replies top border */

	div.reply {
		background: rgba(255,255,255,0.04) !important;
		border-left: none !important;
		border-top: none !important;
	}
	
	/* X replies and X images ommited text */
	
	span.summary {
		color: #e8e6df;
	}
	
	/* catalog stuff */
	.catalog-mode:root .board
	{
		padding-top: 15px !important;
	}

	.catalog-thread > .comment
	{
		padding: 10px 3px 10px 3px !important;
	}
	
	/* Reply and Click Here links */
	a.replylink:not(:hover), div#absbot a:not(:hover) {
		color: #A7ADBA !important;
	}
	
	div.post div.postInfo span.postNum a:hover, .posteruid .hand:hover {
		color: #F7F7F7 !important;
	}
	
	/* Main Post Replies link. Example: */
	.burichan_new .backlink a, .yotsuba_b_new .backlink a {
		color: #A7ADBA !important;
	}
	
	.burichan_new .backlink a:hover, .yotsuba_b_new .backlink a:hover {
		color: #F7F7F7 !important;
	}

	/* index, catalog, bottom links */
	.navLinks,
	.navLinks.desktop
	{
		background-color: #515151 !important;
		padding-left: 20px !important;
		padding-right: 20px !important;
		color: #A7ADBA !important;
	}

	.navLinks > a
	{
		color: #9e9e9e !important;
	}

	/* reply boxes */
	.reply
	{
		background-color: #515151 !important;
		padding: 20px 20px 20px 20px !important;
		border-style: solid none none none !important;
		border-width: 1px 0 0 0 !important;
		border-color: #DFE1E8 !important;
	}

	.opContainer, .op, .post
	{
		background-color: #515151 !important;
		color: #e8e6df;
		overflow: hidden !important;
	}

	div.post div.postInfo span.subject
	{
		color: #e8e6df !important;
	}

	/* change maymay arrow colors */
	blockquote > span.quote
	{
		color: #99CC99 !important;
	}

	/* animate link hover */
	.postMessage > a,a, a:visited, a.backlink, a.quotelink, .backlink.deadlink
	{
		transition: all ease-in-out 0.25s;
		color: #c59799 !important;
	}

	.postMessage > a:hover, a:hover, a.backlink:hover, .backlink.deadlink:hover
	{
		transition: all ease-in-out 0.25s;
		background-color: #c59799 !important;
		color: #e8e6df !important;
	}

	#menu.dialog {
		background-color: #515151 !important;
		box-shadow: 2px 2px 2px rgba(0,0,0,0.7) !important;
		border: none !important;
	}

	div.post div.postInfo span.nameBlock span.name
	{
		color: #e8e6df !important;
	}

	.postertrip
	{
		color: #99CC99 !important;
	}

	span.dateTime, span.file-info > a, a.sauce
	{
		color: #D3D0C8 !important;
	}

	/* reply button */
	#togglePostFormLink
	{
		color: #ffffff !important;
		font-size: 100%;
		text-transform: lowercase;
		position: fixed !important;
		bottom: 3% !important;
		right: 3% !important;
		background-color: #c59799 !important;
		border: 2px solid #c59799 !important;
		border-radius: 2px 2px 2px 2px !important;
		padding: 5px 5px 5px 5px !important;
		z-index: 1 !important;
		box-shadow: 2px 2px 2px rgba(0,0,0,0.7) !important;
	}

	#togglePostFormLink > a
	{
		color: #ffffff !important;
	}

	/* reply menu */
	table.postForm > tbody > tr > td:first-child
	{
		background-color: #c59799 !important;
		border: none !important;
		text-align: center !important;
	}

	/* 4chan-x stuff */
	.yotsuba-b:root .focused.entry
	{
		background: #c59799 !important;
		border: none !important;
		color: #ffffff !important;
	}

	.dialog, .suboption-list > div:last-of-type
	{
		background-color: #ffffff !important;
	}

	.section-main label
	{
		text-decoration: none !important;
		color: #c59799 !important;
	}

	span.description
	{
		color: #606060;
	}

	#fourchanx-settings fieldset, .section-main div::before
	{
		border-color: #c59799 !important;
	}

	#header-bar.dialog
	{
		background-color: #2d2d2d !important;
		color: #e8e6df !important;
	}

	.fixed:root #header-bar
	{
		box-shadow: none !important;
	}

	.yotsuba-b:root .entry
	{
		color: #e8e6df !important;
	}

	.warning, span.post-count.warning, .deadlink
	{
		color: #F2777A !important;
	}

	strong.capcode.hand.id_mod
	{
		color: #CC99CC !important;
	}
}

